@@ -148,4 +148,5 @@
 	$oProc->query("INSERT INTO languages (lang_id, lang_name, available) VALUES ('zh','Chinese','No')");
 	$oProc->query("INSERT INTO languages (lang_id, lang_name, available) VALUES ('zt','Chinese(Taiwan)','Yes')");
 	$oProc->query("INSERT INTO languages (lang_id, lang_name, available) VALUES ('zu','Zulu','No')");
+	$oProc->query("INSERT INTO phpgw_config (config_app, config_name, config_value) VALUES ('phpgwapi','sessions_checkip','True')");
 ?>
